--- a/public/css/style.css
+++ b/public/css/style.css
@@ -239,6 +239,19 @@ header .intro-text {
 	background: linear-gradient(to right, #8a9c7e 0%, #96ab89 100%);
 	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
 }
+#features .fi {
+	font-size: 38px;
+	margin-bottom: 20px;
+	transition: all 0.5s;
+	color: rgb(250, 250, 250);
+	width: 120px;
+	height: 120px;
+	padding: 30px 0;
+	border-radius: 50%;
+	background: linear-gradient(to right, #8a9c7e 0%, #96ab89 100%);
+	box-shadow: 10px 10px 10px rgba(0,0,0,.05);
+}
+
 /* About Section */
 #about {
 	padding: 100px 0;
